--- a/index.html
+++ b/index.html
@@ -282,21 +282,11 @@
               <li data-target="#carousel-presentation" data-slide-to="9"></li>
               <li data-target="#carousel-presentation" data-slide-to="10"></li>
               <li data-target="#carousel-presentation" data-slide-to="11"></li>
-              <li data-target="#carousel-presentation" data-slide-to="12"></li>
-              <li data-target="#carousel-presentation" data-slide-to="13"></li>
-              <li data-target="#carousel-presentation" data-slide-to="14"></li>
-              <li data-target="#carousel-presentation" data-slide-to="15"></li>
-              <li data-target="#carousel-presentation" data-slide-to="16"></li>
             </ol>
 
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
               <div class="item active">
-                <img class="presentation-image" src="img/InfraStitch Software Presentation.001.jpeg" alt="...">
-                <div class="carousel-caption">
-                </div>
-              </div>
-              <div class="item">
                 <img class="presentation-image" src="img/InfraStitch Software Presentation.002.jpeg" alt="...">
                 <div class="carousel-caption">
                 </div>
@@ -313,21 +303,6 @@
               </div>
               <div class="item">
                 <img class="presentation-image" src="img/InfraStitch Software Presentation.005.jpeg" alt="...">
-                <div class="carousel-caption">
-                </div>
-              </div>
-              <div class="item">
-                <img class="presentation-image" src="img/InfraStitch Software Presentation.006.jpeg" alt="...">
-                <div class="carousel-caption">
-                </div>
-              </div>
-              <div class="item">
-                <img class="presentation-image" src="img/InfraStitch Software Presentation.007.jpeg" alt="...">
-                <div class="carousel-caption">
-                </div>
-              </div>
-              <div class="item">
-                <img class="presentation-image" src="img/InfraStitch Software Presentation.008.jpeg" alt="...">
                 <div class="carousel-caption">
                 </div>
               </div>
@@ -371,20 +346,15 @@
                 <div class="carousel-caption">
                 </div>
               </div>
-              <div class="item">
-                <img class="presentation-image" src="img/InfraStitch Software Presentation.017.jpeg" alt="...">
-                <div class="carousel-caption">
-                </div>
-              </div>
             </div>
 
             <!-- Controls -->
             <a class="left carousel-control" href="#carousel-presentation" role="button" data-slide="prev">
-              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+              <span class="icon-lg ion-arrow-left-b presentation-drection" aria-hidden="true"></span>
               <span class="sr-only">Previous</span>
             </a>
             <a class="right carousel-control" href="#carousel-presentation" role="button" data-slide="next">
-              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+              <span class="icon-lg ion-arrow-right-b presentation-drection" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
         </div>
